zeplab/compile-errors.log
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/main.c:275:76: warning: comparison between pointer and integer ('bool' and 'void *') [-Wpointer-integer-compare]
  275 |         if (zend_hash_str_exists(CG(function_table), function_name, function_len) != NULL) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~
1 warning generated.
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:46:26: error: call to undeclared function 'zend_exception_get_default'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   46 |                 object_init_ex(object, zend_exception_get_default());
      |                                        ^
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:46:26: note: did you mean 'zend_exception_set_previous'?
/opt/homebrew/Cellar/php/8.5.0/include/php/Zend/zend_exceptions.h:43:15: note: 'zend_exception_set_previous' declared here
   43 | ZEND_API void zend_exception_set_previous(zend_object *exception, zend_object *add_previous);
      |               ^
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:46:26: error: incompatible integer to pointer conversion passing 'int' to parameter of type 'zend_class_entry *' (aka 'struct _zend_class_entry *') [-Wint-conversion]
   46 |                 object_init_ex(object, zend_exception_get_default());
      |                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/homebrew/Cellar/php/8.5.0/include/php/Zend/zend_API.h:541:66: note: passing argument to parameter 'ce' here
  541 | ZEND_API zend_result object_init_ex(zval *arg, zend_class_entry *ce);
      |                                                                  ^
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:57:27: error: call to undeclared function 'zend_exception_get_default'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   57 |                         default_exception_ce = zend_exception_get_default();
      |                                                ^
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:57:25: error: incompatible integer to pointer conversion assigning to 'zend_class_entry *' (aka 'struct _zend_class_entry *') from 'int' [-Wint-conversion]
   57 |                         default_exception_ce = zend_exception_get_default();
      |                                              ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:85:26: error: call to undeclared function 'zend_exception_get_default'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   85 |                 default_exception_ce = zend_exception_get_default();
      |                                        ^
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:85:24: error: incompatible integer to pointer conversion assigning to 'zend_class_entry *' (aka 'struct _zend_class_entry *') from 'int' [-Wint-conversion]
   85 |                 default_exception_ce = zend_exception_get_default();
      |                                      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6 errors generated.
make: *** [kernel/exception.lo] Error 1
make: *** Waiting for unfinished jobs....
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:46:26: error: call to undeclared function 'zend_exception_get_default'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   46 |                 object_init_ex(object, zend_exception_get_default());
      |                                        ^
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:46:26: note: did you mean 'zend_exception_set_previous'?
/opt/homebrew/Cellar/php/8.5.0/include/php/Zend/zend_exceptions.h:43:15: note: 'zend_exception_set_previous' declared here
   43 | ZEND_API void zend_exception_set_previous(zend_object *exception, zend_object *add_previous);
      |               ^
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:46:26: error: incompatible integer to pointer conversion passing 'int' to parameter of type 'zend_class_entry *' (aka 'struct _zend_class_entry *') [-Wint-conversion]
   46 |                 object_init_ex(object, zend_exception_get_default());
      |                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/homebrew/Cellar/php/8.5.0/include/php/Zend/zend_API.h:541:66: note: passing argument to parameter 'ce' here
  541 | ZEND_API zend_result object_init_ex(zval *arg, zend_class_entry *ce);
      |                                                                  ^
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:57:27: error: call to undeclared function 'zend_exception_get_default'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   57 |                         default_exception_ce = zend_exception_get_default();
      |                                                ^
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:57:25: error: incompatible integer to pointer conversion assigning to 'zend_class_entry *' (aka 'struct _zend_class_entry *') from 'int' [-Wint-conversion]
   57 |                         default_exception_ce = zend_exception_get_default();
      |                                              ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:85:26: error: call to undeclared function 'zend_exception_get_default'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   85 |                 default_exception_ce = zend_exception_get_default();
      |                                        ^
/Users/svenschrodt/projx/ZepLab/zeplab/ext/kernel/exception.c:85:24: error: incompatible integer to pointer conversion assigning to 'zend_class_entry *' (aka 'struct _zend_class_entry *') from 'int' [-Wint-conversion]
   85 |                 default_exception_ce = zend_exception_get_default();
      |                                      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6 errors generated.
make: *** [kernel/exception.lo] Error 1
